# irenaeus

./: ChangeLog  Makefile.am  Makefile.in  README  TODO  distribute  iomgr.cpp  irenaeus.cpp  irenaeus.h  irenaeus.spec  irenaeussword.cpp  releasenote  sword.el  swordint.el  swordnote  toadd.cpp
.deps/: iomgr.P  zebra.P  zebraint.P
filters/: Makefile  Makefile.am  plainfootnotes.cpp  plainfootnotes.h
irenaeus/: AUTHORS  configure.in  swordint.el
irenaeus-0.12/: Makefile  Makefile.in  NEWS  README  config.cache  config.status  configure  iomgr.cpp  irenaeus  irenaeus.cpp  irenaeus.h
irenaeus-0.12/.deps/: iomgr.P  irenaeus.P  irenaeussword.P
irenaeus/filters/: Makefile.in
irenaeus/filters/.deps/: plainfootnotes.P
test/: test.sh  test1
