####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libfilters_a_METASOURCES = USE_AUTOMOC

noinst_LIBRARIES = libfilters.a

libfilters_a_SOURCES = plainfootnotes.cpp 


EXTRA_DIST = plainfootnotes.cpp plainfootnotes.h 

####### kdevelop will overwrite this part!!! (end)############
