dnl Process this file with autoconf to produce a configure script.

AC_INIT(irenaeus.cpp)


AM_INIT_AUTOMAKE(irenaeus, 0.1)

AC_PROG_CC

AC_PROG_CXX

AC_LANG_CPLUSPLUS
LIBS="$LIBS -L../../../lib -lsword -lz -lcurses -lpanel -lmenu"
dnl Only use -Wall if we have gcc
if test "x$GCC" = "xyes"; then
  if test -z "`echo "$CFLAGS" | grep "\-Wall" 2> /dev/null`" ; then
    CFLAGS="$CFLAGS -Wall"
  fi
fi

AC_OUTPUT(Makefile)
